bin_PROGRAMS = fld-ctr  fslicer fwc get-fs  hashpend    rnd-extract
fld_ctr_SOURCES = fld-ctr.c vstrutils.c
fslicer_SOURCES = fslicer.c
fwc_SOURCES = fwc.c vstrutils.c
get_fs_SOURCES = get-fs.cpp
hashpend_SOURCES = hashpend.cpp vstrutils.c vhash.cpp vmath.cpp
rnd_extract_SOURCES = rnd-extract.c vstrutils.c

AM_CFLAGS = -Wno-implicit-function-declaration 
AM_CXXFLAGS = -Wno-implicit-function-declaration -Wno-c++11-extensions -std=c++14 -Wno-write-strings